--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>MikroTik Script RouterOS - mikrotiktool.Github.io</title>
+<title>MikroTik Script RouterOS - mikrotikscript.Github.io</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
