--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-<a href="https://irfannjt.github.io/script/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
+<a href="https://irfannjt.github.io/script/mikrotik/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
 </div>	
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- mikrotiktool -->
@@ -326,7 +326,7 @@ background-color: #8E2DE2
 </span>	 
 <h2>FREE MIKROTIK ROUTEROS TOOLS</h2>
 <h3>MIKROTIK <span style="color:red">[</span> SCRIPT <span style="color:red">]</span> ROUTEROS DATABASE</h3>
-<p><a target="https://irfannjt.github.io/script/mikrotik"  href="https://irfannjt.github.io/script/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
+<p><a target="https://irfannjt.github.io/script/mikrotik/"  href="https://irfannjt.github.io/script/mikrotik/">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
 <p><a target="_blank"  href="/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
