--- a/index.html
+++ b/index.html
@@ -330,22 +330,22 @@ background-color: #8E2DE2
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
 <p><a target="_blank"  href="/script/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
-<p><a target="_blank"  href="/mikrotik-burst-limit-calculator.html">MikroTik Burst Limit Calculator</a> - Simple MikroTik Burst Limit Calculator For RouterOS</p>
-<p><a target="_blank"  href="/mikrotik-pcq-burst-rate-queue-size-generator.html">MikroTik PCQ Burst Rate + Queue Size Calculator</a> - MikroTik PCQ Burst Rate + Queue Size Calculator For RouterOS</p>
-<p><a target="_blank"  href="/vpn-game-generator.html">VPN Routing Port Game Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Port Game Routing Method) </p>
-<p><a target="_blank"  href="/vpn-game-generator2.html">VPN Routing IP Address Games Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Ip Address Game Routing Method)</p>
-<p><a target="_blank"  href="/ecmp.html">Load Balancing ECMP Script Generator</a> - Load Balancing ECMP (Equal Cost Multi Path) Script Generator or Script Maker For Mikrotik Routeros</p>
-<p><a target="_blank"  href="/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
-<p><a target="_blank"  href="/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>  
-<p><a target="_blank"  href="/simple-queue-generator.html">Simple Queue Script Generator For Mikrotik + Tocken Bucket</a> - Simple Queue Script Generator or Script Maker For Mikrotik Plus Token Bucket - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
-<p><a target="_blank"  href="/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik</p>
-<p><a target="_blank"  href="/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
-<p><a target="_blank"  href="/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator</p>
-<p><a target="_blank"  href="/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
-<p><a target="_blank"  href="/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
-<p><a target="_blank"  href="/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
+<p><a target="_blank"  href="/script/mikrotik-burst-limit-calculator.html">MikroTik Burst Limit Calculator</a> - Simple MikroTik Burst Limit Calculator For RouterOS</p>
+<p><a target="_blank"  href="/script/mikrotik-pcq-burst-rate-queue-size-generator.html">MikroTik PCQ Burst Rate + Queue Size Calculator</a> - MikroTik PCQ Burst Rate + Queue Size Calculator For RouterOS</p>
+<p><a target="_blank"  href="/script/vpn-game-generator.html">VPN Routing Port Game Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Port Game Routing Method) </p>
+<p><a target="_blank"  href="/script/vpn-game-generator2.html">VPN Routing IP Address Games Script Generator</a> - Static Routing Vpn Game Script Generator or Script Maker (Ip Address Game Routing Method)</p>
+<p><a target="_blank"  href="/script/ecmp.html">Load Balancing ECMP Script Generator</a> - Load Balancing ECMP (Equal Cost Multi Path) Script Generator or Script Maker For Mikrotik Routeros</p>
+<p><a target="_blank"  href="/script/pcc.html">Load Balancing PCC Script Generator</a> - LB PCC / Load Balancing PCC Script Generator or Script Maker For Mikrotik Routeros</p>
+<p><a target="_blank"  href="/script/nth.html">Load Balancing NTH Script Generator</a> - LB NTH / Load Balancing NTH Script Generator or Script Maker For Mikrotik Routeros</p>  
+<p><a target="_blank"  href="/script/simple-queue-generator.html">Simple Queue Script Generator For Mikrotik + Tocken Bucket</a> - Simple Queue Script Generator or Script Maker For Mikrotik Plus Token Bucket - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/script/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/script/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
+<p><a target="_blank"  href="/script/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik</p>
+<p><a target="_blank"  href="/script/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
+<p><a target="_blank"  href="/script/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator</p>
+<p><a target="_blank"  href="/script/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
+<p><a target="_blank"  href="/script/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
+<p><a target="_blank"  href="/script/wifid-wms-seamless.html">Wifi.id WMS and Seamless Auto Login Script Generator</a> - Wifi.id WMS and Seamless Auto Login Script Generator For Mikrotik RouterOS</p>
 
 <h3>MIKROTIK TOOLS BY MIKROTIK.COM</h3>
 <p><a target="_blank"  href="https://mt.lv/winbox64">Winbox-64 (64bit)</a> - Winbox 64 bit is a small utility that allows administration of MikroTik RouterOS using a fast and simple GUI t is a native Win64 binary</p>
