--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
 <html lang="en">
 <head>
 <title>Free MikroTik RouterOS Online Tools </title>
-<meta name="google-site-verification" content="google-site-verification=v9jfwyACp9axJqzwm1GlUgutNsmz-gLAg37rIqsnln0">
+<meta name="google-site-verification" content="">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
-By mikrotiktool.Github.io' name='description'/>
+By mikrotikscript.Github.io' name='description'/>
 <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
-<link rel="shortcut icon" href="https://mikrotiktool.github.io/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="htpps://irfannjt.github.io/script/favicon.ico" type="image/x-icon"> 
 <meta property="og:title" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:description" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://mikrotiktool.github.io">
+<meta property="og:url" content="htpps://irfannjt.github.io/script/">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3815059393374366" crossorigin="anonymous"></script>
 <style> 
 body {
@@ -406,7 +406,7 @@ background-color: #8E2DE2
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
 <div style="margin-top:20px; text-align:center; font-size:14px"
-© Copyright 2020-2021 <a href="htpps://mikrotiktool.github.io">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>   
+© Copyright 2020-2021 <a href="htpps://irfannjt.github.io/script/">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>   
 </div>
 </div>
 <script type="text/javascript">
