--- a/mikrotik/index.html
+++ b/mikrotik/index.html
@@ -14,7 +14,7 @@
 <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/111909594-8074e400-8a90-11eb-8d98-5dfe4b21c657.png">
 <meta property="og:image:alt" content="Mikrotik RouterOS Script">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://irfannjt/script.github.io/mikrotik">	
+<meta property="og:url" content="https://irfannjt/script.github.io/script/">	
 <style>
 /* ----------------------------------------------
 #################################################
