--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset='utf-8'/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>MikroTik Burst Limit Calculator - mikrotiktool.Github.io</title>
+<title>MikroTik Burst Limit Calculator - mikrotikscript.Github.io</title>
 <meta content='MikroTik Burst Limit Calculator for Hotspot, PPPPoe, PCQ, Simple Queue and Queue Tree - mikrotiktool.Github.io' name='description'/>
 <meta content='burst, calculator, load balancing, pcc,LB, script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
@@ -13,7 +13,7 @@
 <meta property="og:image" content="https://user-images.githubusercontent.com/42666125/126348586-4250ed23-c8a9-40d0-b89e-79066a288000.png">
 <meta property="og:image:alt" content="MikroTik Burst Limit Calculator ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://mikrotiktool.github.io/mikrotik-burst-limit-calculator.html">
+<meta property="og:url" content="https://mikrotikscript.github.io/script/mikrotik-burst-limit-calculator.html">
 <script data-ad-client="ca-pub-3815059393374366" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TL99Q9M2"></script>
