--- a/mikrotik-burst-limit-calculator.html
+++ b/mikrotik-burst-limit-calculator.html
@@ -443,7 +443,7 @@ data-ad-slot="4637807296"></ins>
 </script>
 </div>
 <div style="margin-top:20px; text-align:center">
-© Copyright 2020-2021 <a href="https://mikrotiktool.github.io/">mikrotiktool.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
+© Copyright 2020-2024 <a href="https://mikrotikscript.github.io/script/">mikrotikscript.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
 </div>
  </div>
   </div>
