--- a/index.html
+++ b/index.html
@@ -301,8 +301,7 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-<a href="https://irfannjt.github.io/script/mikrotik/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
-<!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4893299,4,16,150,30,00010000']);
