--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-!-- Histats.com  (div with counter) --><div id="histats_counter"></div>
+mikrotikscript.Github.io<div id="histats_counter"></div>
 <!-- Histats.com  START  (aync)-->
 <script type="text/javascript">var _Hasync= _Hasync|| [];
 _Hasync.push(['Histats.start', '1,4893299,4,16,150,30,00010000']);
