--- a/index.html
+++ b/index.html
@@ -301,20 +301,9 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-mikrotikscript.Github.io<div id="histats_counter"></div>
-<!-- Histats.com  START  (aync)-->
-<script type="text/javascript">var _Hasync= _Hasync|| [];
-_Hasync.push(['Histats.start', '1,4893299,4,16,150,30,00010000']);
-_Hasync.push(['Histats.fasi', '1']);
-_Hasync.push(['Histats.track_hits', '']);
-(function() {
-var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
-hs.src = ('//s10.histats.com/js15_as.js');
-(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
-})();</script>
-<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?4893299&101" alt="" border="0"></a></noscript>
-<!-- Histats.com  END  -->
-</div>	
+mikrotikscript.Github.io
+  <div id="histats_counter"></div>
+<a href="https://irfannjt.github.io/script/"><span style="color:rgba(255,0,36,.7) !important">mikrotikscript</span>.Github.io</a> <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false</div>	
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- mikrotiktool -->
 <ins class="adsbygoogle"
