--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Free MikroTik RouterOS Online Tools </title>
-<meta name="google-site-verification" content="">
+<title>Free MikroTik RouterOS Online Tools - By mikrotiktool.Github.io</title>
+<meta name="google-site-verification" content="google-site-verification=v9jfwyACp9axJqzwm1GlUgutNsmz-gLAg37rIqsnln0">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
-By mikrotikscript.Github.io' name='description'/>
+By mikrotiktool.Github.io' name='description'/>
 <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
-<link rel="shortcut icon" href="htpps://irfannjt.github.io/script/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="https://irfannjt.github.io/script/favicon.ico" type="image/x-icon"> 
 <meta property="og:title" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:description" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="htpps://irfannjt.github.io/script/">
+<meta property="og:url" content="https://irfannjt.github.io/script/">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3815059393374366" crossorigin="anonymous"></script>
 <style> 
 body {
@@ -301,6 +301,8 @@ background-color: #8E2DE2
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
+<a href="https://mikrotiktool.github.io"><span style="color:#8E2DE2 !important">irfannjt</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
+</div>	
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- mikrotiktool -->
 <ins class="adsbygoogle"
@@ -320,11 +322,11 @@ background-color: #8E2DE2
   gtag('config', 'G-M5TL99Q9M2');
 </script>
 <span style="line-height:0;float:left; display:inline;margin-right:6px; margin-top:25px">
-<img src="https://mikrotiktool.github.io/mikrotik/img/logo.png" alt="HOME">
+<img src="https://irfannjt.github.io/script/mikrotik/img/logo.png" alt="HOME">
 </span>	 
 <h2>FREE MIKROTIK ROUTEROS TOOLS</h2>
 <h3>MIKROTIK <span style="color:red">[</span> SCRIPT <span style="color:red">]</span> ROUTEROS DATABASE</h3>
-<p><a target="https://irfannjt.github.io/script/mikrotik/"  href="https://irfannjt.github.io/script/mikrotik/">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
+<p><a target="_blank"  href="https://irfannjt.github.io/script/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
 <p><a target="_blank"  href="/script/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
@@ -339,7 +341,7 @@ background-color: #8E2DE2
 <p><a target="_blank"  href="/script/simple-queue-generator-shared.html">Simple Queue Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Simple Queue Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
 <p><a target="_blank"  href="/script/queue-tree-generator-shared.html">Queue Tree Script Generator For Mikrotik + Bandwidth Shared (UpTo)</a> - Queue Tree Script Generator Mikrotik + Bandwidth Shared (Upto) - For IP Subnet /24 Only</p>
 <p><a target="_blank"  href="/script/remote-ip-public-static.html">Remote IP Public Static For Secondary Gateway Mikrotik</a> - Simple Script how Remote IP Public Static For Secondary Gateway Mikrotik</p>
-<p><a target="_blank"  href="/script/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
+<p><a target="_blank"  href="/port-knocking-icmp.html">Port Knocking Generator with (ping) ICMP + Packet Size</a> - Mikrotik Port Knocking Generator or Knocking Script Maker With Icmp + Packet Size</p>
 <p><a target="_blank"  href="/script/pcc-calculation.html">LB PCC Calculation / Load Balancing PCC Calculation</a> - Simple LB PCC (Load Balancing Per Connection Classifier) Calculator</p>
 <p><a target="_blank"  href="/script/mikrotik-pcq-generator.html">PCQ Generator For Queue Tree And Queue Simple</a> - Mikrotik PCQ Generator For Queue Tree And Queue Simple, very easy</p>
 <p><a target="_blank"  href="/script/vpn-tunnel-all-traffic-script-generator.html">VPN Tunnel All Traffic Script Generator</a> - VPN Tunnel All Traffic Script Generator For Mikrotik RouterOS</p>
@@ -404,7 +406,7 @@ background-color: #8E2DE2
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script> 
 <div style="margin-top:20px; text-align:center; font-size:14px"
-© Copyright 2020-2021 <a href="htpps://irfannjt.github.io/script/">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>   
+© Copyright 2020-2021 <a href="htpps://irfannjt.github.io/script/">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/irfannjt">My Github</a>   
 </div>
 </div>
 <script type="text/javascript">
