--- a/ecmp.html
+++ b/ecmp.html
@@ -294,7 +294,7 @@ border: none;
 <body onLoad="callmodal()">
 <div id="wrap">
 <div class="logo">
-<a href="https://mikrotikscript.Github.io/script/"><span style="color:#a8328b !important">mikrotikscript</span>.Github.io</a>  <img style="float:right; padding-top:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fmikrotiktool.github.io%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false" alt="Hits"/>
+<a href="https://irfannjt.github.io/script/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
 </div>
 		<div class="header">
 			<span style="float:left; display:inline;margin-right:6px; margin-top:10px">
