--- a/ecmp.html
+++ b/ecmp.html
@@ -13,7 +13,7 @@
 	<meta property="og:description" content="Load Balancing ECMP Script Generator ">
 	<meta property="og:image:alt" content="Load Balancing ECMP Script Generator ">
 	<meta property="og:type" content="website">
-<meta property="og:url" content="https://mikrotikscript.Github.io/script/ecmp.html">
+<meta property="og:url" content="https://irfannjt.Github.io/script/ecmp.html">
 	<script data-ad-client="ca-pub-3815059393374366" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<style>
  
@@ -298,7 +298,7 @@ border: none;
 </div>
 		<div class="header">
 			<span style="float:left; display:inline;margin-right:6px; margin-top:10px">
-<a href="https://mikrotikscript.Github.io/script/ecmp.html"><img src="https://mikrotikscript.Github.io/script/mikrotik/img/logo.png" alt="HOME"></a>
+<a href="https://irfannjt.Github.io/script/ecmp.html"><img src="https://irfannjt.Github.io/script/mikrotik/img/logo.png" alt="HOME"></a>
 </span>
 			<h1>LOAD BALANCING <span style="color:#a8328b">ECMP</span> (Equal Cost Multi Path) SCRIPT GENERATOR FOR MIKROTIK ROUTEROS</h1>
 		</div>
@@ -473,7 +473,7 @@ border: none;
         </div>
 		<div class="footer">
 		<div style="float:right">
-	    © Copyright 2020-2024 <a href="https://mikrotikscript.Github.io/script/">mikrotikscript.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
+	    © Copyright 2020-2024 <a href="https://irfannjt.Github.io/script/">mikrotikscript.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
 		</div>
 		<span style="color:#a8328b"><b># This script for remove all script from this Generator</b></span>
 			<br>/ip firewall nat remove [find comment="LB By BNT"]
