--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@ background-color: #8E2DE2
 </span>	 
 <h2>FREE MIKROTIK ROUTEROS TOOLS</h2>
 <h3>MIKROTIK <span style="color:red">[</span> SCRIPT <span style="color:red">]</span> ROUTEROS DATABASE</h3>
-<p><a target="_blank"  href="https://irfannjt.github.io/script/mikrotik">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
+<p><a target="_blank"  href="https://irfannjt.github.io/script/mikrotik/">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
 <p><a target="_blank"  href="/script/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
