--- a/ecmp.html
+++ b/ecmp.html
@@ -8,13 +8,12 @@
 	<meta content='Load Balancing ECMP Script Generator For Mikrotik Routeros' name='description' />
 	<meta content='script generator, mikrotik, router, winbox, termimal, rsc, script, hotspot, wireless, rtrwnet' name='keywords' />
 	<meta content='index, follow, noodp' name='robots' />
-	<link rel="shortcut icon" href="https://mikrotiktool.github.io/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://irfannjt.github.io/script/favicon.ico" type="image/x-icon">
 	<meta property="og:title" content="Load Balancing ECMP Script Generator ">
 	<meta property="og:description" content="Load Balancing ECMP Script Generator ">
 	<meta property="og:image:alt" content="Load Balancing ECMP Script Generator ">
 	<meta property="og:type" content="website">
 <meta property="og:url" content="https://irfannjt.Github.io/script/ecmp.html">
-	<script data-ad-client="ca-pub-3815059393374366" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 	<style>
  
 *{-webkit-transition: all .3s ease-in;-moz-transition: all .3s ease-in;-ms-transition: all .3s ease-in;transition: all .3s ease-in;}
@@ -388,13 +387,6 @@ border: none;
 		<div class="content"> <span style="margin-left:2px">Script Generator Result</span>
 			<div class="list-mangle">
 			<div style="width:100%; height:90px; margin-top:10px; margin-left:10px; margin-bottom:5px;">
-			<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-			<!-- MIKROTIK SCRIPT DB3 -->
-			<ins class="adsbygoogle"
-			style="display:inline-block;width:728px;height:90px"
-			data-ad-client="ca-pub-3815059393374366"
-			data-ad-slot="4637807296"></ins>
-			<script>
 			(adsbygoogle = window.adsbygoogle || []).push({});
 			</script>
 			</div>
@@ -473,7 +465,7 @@ border: none;
         </div>
 		<div class="footer">
 		<div style="float:right">
-	    © Copyright 2020-2024 <a href="https://irfannjt.Github.io/script/">mikrotikscript.github.io</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
+	    © Copyright 2020-2024 <a href="https://irfannjt.Github.io/script/">irfannjt.github.io/script/</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
 		</div>
 		<span style="color:#a8328b"><b># This script for remove all script from this Generator</b></span>
 			<br>/ip firewall nat remove [find comment="LB By BNT"]
