--- a/ecmp.html
+++ b/ecmp.html
@@ -293,7 +293,7 @@ border: none;
 <body onLoad="callmodal()">
 <div id="wrap">
 <div class="logo">
-<a href="https://irfannjt.github.io/script/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
+<a href="https://irfannjt.github.io/script/"><span style="color:#8E2DE2 !important">irfannjt</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
 </div>
 		<div class="header">
 			<span style="float:left; display:inline;margin-right:6px; margin-top:10px">
@@ -464,7 +464,7 @@ border: none;
         </div>
 		<div class="footer">
 		<div style="float:right">
-	    © Copyright 2020-2024 <a href="https://irfannjt.Github.io/script/">irfannjt.github.io/script/</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/mikrotiktool">My Github</a>  
+	    © Copyright 2020-2024 <a href="https://irfannjt.Github.io/script/">irfannjt.github.io/script/</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a><br> Don't Forget to Follow <a href="https://github.com/irfannjt">My Github</a>  
 		</div>
 		<span style="color:#a8328b"><b># This script for remove all script from this Generator</b></span>
 			<br>/ip firewall nat remove [find comment="LB By BNT"]
