--- a/index.html
+++ b/index.html
@@ -17,286 +17,244 @@ By mikrotiktool.Github.io' name='description'/>
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://irfannjt.github.io/script/">
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3815059393374366" crossorigin="anonymous"></script>
-<style> 
-body {
-background: #8E2DE2;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to left, #8E2DE2, #4A00E0);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to left, #8E2DE2, #4A00E0 ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
--ms-text-size-adjust: 100%;
--webkit-text-size-adjust:100%;
-line-height:2.0;
-font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
-font-size: 16px;
-word-wrap: break-word;
-}
-h1, h2 {font-size: 25px; border-bottom:0px solid #ddd; margin-bottom:20px; color:#000;line-height:1.5}
-h3, h4, h5, h6{font-size: 20px; border-bottom:1px solid #ddd; margin-bottom:10px; padding-botto:10px; color:#000;line-height:1.5}
+ <style>
+      *{
+      margin:0;
+      padding:0;
+      }
+      .gsib_a{
+      height:30px; 
+      padding-left:10px 
+      !important; 
+      }
+      .gsc-input input{
+      color:#111; 
+      background:#ddd !important; 
+      width:100% !important
+      }
+      .gsc-input-box {
+      border-radius:5px; height:40px;
+      background:#ddd !important;
+      margin-right: -6px !important;
+      line-height:normal !important
+      }
+      .gsc-search-button-v2 {
+      border-radius:5px !important;
+      height:40px !important;
+      }
+      .gsc-control-cse {
+      background:none !important;
+      border:none !important; 
+      clear: both 
+      }
 
-pre {
-white-space: -moz-pre-wrap; /* Mozilla, supported since 1999 */
-white-space: -pre-wrap; /* Opera */
-white-space: -o-pre-wrap; /* Opera */
-white-space: pre-wrap; /* CSS3 - Text module (Candidate Recommendation) http://www.w3.org/TR/css3-text/#white-space */
-word-wrap: break-word; /* IE 5.5+ */
-}
-b{font-size:17px}
-p {
-padding:0;
-margin:5px 5px 0 17px;
-display:list-item;
-list-style: square;
-}
-.logo {
-padding-top:10px;
-padding-bottom:15px;  
-margin-bottom:0px;
-color: #111;
-text-decoration:none;
-font-size:30px;
-font-weight:bold; 
-border-bottom:0px solid #ccc;
-text-align:center;
-}	
-.logo a{
-color:#111 !important;
-}
-* {
-box-sizing: border-box;
-}
-.content {
-max-width:900px;
-min-width:200px;
-margin:0 auto;
-padding: 20px;
-border-radius: 3px;
-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-background:#fff;
-}
-/* unvisited link */
-a:link {
-  color: #8E2DE2;
-  text-decoration:none;
-}
-/* visited link */
-a:visited {
-  color: #8E2DE2;
-  text-decoration:none;
-}
-/* mouse over link */
-a:hover {
-  color: #000;
-}
-@media screen and (max-width: 1024px){
-body{
-background: #fff !important;
-padding:10px;  
-}
-.content {
-max-width:100%;
-padding:0;
-border-radius: 3px;
-box-shadow: 0 0 0 0;
-background:#fff;
-}  
-.logo {font-size:28px;}  
-}  
-/* selected link */
-a:active {
-  color: #8E2DE2;
-  text-decoration:none;
-  margin-top:10px !important;
-}
-.resp-sharing-button__link,
-.resp-sharing-button__icon {
-  display: inline-block
-}
-.resp-sharing-button__link {
-  text-decoration: none;
-  color: #fff;
-  margin: 0.5em
-}
-.resp-sharing-button {
-  border-radius: 5px;
-  transition: 25ms ease-out;
-  padding: 0.5em 0.75em;
-  font-family: Helvetica Neue,Helvetica,Arial,sans-serif
-}
-.resp-sharing-button__icon svg {
-  width: 1em;
-  height: 1em;
-  margin-right: 0.4em;
-  vertical-align: top
-}
-.resp-sharing-button--small svg {
-  margin: 0;
-  vertical-align: middle
-}
-/* Non solid icons get a stroke */
-.resp-sharing-button__icon {
-  stroke: #fff;
-  fill: none
-}
-/* Solid icons get a fill */
-.resp-sharing-button__icon--solid,
-.resp-sharing-button__icon--solidcircle {
-  fill: #fff;
-  stroke: none
-}
-.resp-sharing-button--twitter {
-  background-color: #55acee
-}
-.resp-sharing-button--twitter:hover {
-  background-color: #2795e9
-}
-.resp-sharing-button--pinterest {
-  background-color: #bd081c
-}
-.resp-sharing-button--pinterest:hover {
-  background-color: #8c0615
-}
-.resp-sharing-button--facebook {
-  background-color: #3b5998
-}
-.resp-sharing-button--facebook:hover {
-  background-color: #2d4373
-}
-.resp-sharing-button--tumblr {
-  background-color: #35465C
-}
-.resp-sharing-button--tumblr:hover {
-  background-color: #222d3c
-}
-.resp-sharing-button--reddit {
-  background-color: #5f99cf
-}
-.resp-sharing-button--reddit:hover {
-  background-color: #3a80c1
-}
-.resp-sharing-button--google {
-  background-color: #dd4b39
-}
-.resp-sharing-button--google:hover {
-  background-color: #c23321
-}
-.resp-sharing-button--linkedin {
-  background-color: #0077b5
-}
-.resp-sharing-button--linkedin:hover {
-  background-color: #046293
-}
-.resp-sharing-button--email {
-  background-color: #777
-}
-.resp-sharing-button--email:hover {
-  background-color: #5e5e5e
-}
-.resp-sharing-button--xing {
-  background-color: #1a7576
-}
-.resp-sharing-button--xing:hover {
-  background-color: #114c4c
-}
-.resp-sharing-button--whatsapp {
-  background-color: #25D366
-}
-.resp-sharing-button--whatsapp:hover {
-  background-color: #1da851
-}
-.resp-sharing-button--hackernews {
-background-color: #8E2DE2
-}
-.resp-sharing-button--hackernews:hover, .resp-sharing-button--hackernews:focus {   background-color: #FB6200 }
-.resp-sharing-button--vk {
-  background-color: #507299
-}
-.resp-sharing-button--vk:hover {
-  background-color: #43648c
-}
-.resp-sharing-button--facebook {
-  background-color: #3b5998;
-  border-color: #3b5998;
-}
-.resp-sharing-button--facebook:hover,
-.resp-sharing-button--facebook:active {
-  background-color: #2d4373;
-  border-color: #2d4373;
-}
-.resp-sharing-button--twitter {
-  background-color: #55acee;
-  border-color: #55acee;
-}
-.resp-sharing-button--twitter:hover,
-.resp-sharing-button--twitter:active {
-  background-color: #2795e9;
-  border-color: #2795e9; 
-}
-.resp-sharing-button--tumblr {
-  background-color: #35465C;
-  border-color: #35465C;
-}
-.resp-sharing-button--tumblr:hover,
-.resp-sharing-button--tumblr:active {
-  background-color: #222d3c;
-  border-color: #222d3c;
-}
-.resp-sharing-button--email {
-  background-color: #777777;
-  border-color: #777777;
-}
-.resp-sharing-button--email:hover,
-.resp-sharing-button--email:active {
-  background-color: #5e5e5e;
-  border-color: #5e5e5e;
-}
-.resp-sharing-button--pinterest {
-  background-color: #bd081c;
-  border-color: #bd081c;
-}
-.resp-sharing-button--pinterest:hover,
-.resp-sharing-button--pinterest:active {
-  background-color: #8c0615;
-  border-color: #8c0615;
-}
-
-/* The Modal (background) */
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-}
-/* Modal Content */
-.modal-content {
-  background-color: #fefefe;
-  margin: auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 50%;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
-}
-
-/* The Close Button */
-.close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-</style>
+      *{-webkit-transition:all .3s ease-in;-moz-transition:all .3s ease-in;-ms-transition:all .3s ease-in;transition:all .3s ease-in}
+      body{font-size:16px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";margin:0}
+      html,body{color:#292929;height:100%;width:100%;margin:0px;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
+      *{box-sizing:border-box}
+      h1{font-size:48px;font-size:3rem;font-weight:700;letter-spacing:-1.6px;letter-spacing:-.1rem;line-height:1;text-align:center}
+      h1 span.light{font-weight:300}
+      h1 strong{font-weight:600}
+      h2{font-weight:600;font-size:21px;color:#292929;border-bottom:1px solid #ccc;margin-bottom:6px;padding-bottom:3px}
+      h3,h4,h5,h6{font-weight:400;font-size:17px;color:#292929;margin-bottom:10px;padding-bottom:10px}
+      pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
+      b{font-size:15px}
+      p{padding:0;margin:4px 0 0 17px;display:list-item;list-style:disc}
+      .logo{color:#fff;text-decoration:none;font-size:25px;font-weight:700;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;margin-bottom:15px;margin-top:10px;padding:25px;clear:both}
+      .logo a{color:#fff!important;font-size:25px}
+      #wrap{min-width:200px;max-width:900px;margin:0 auto;padding:0 5px;}
+      .content{max-width:100%;margin:0 auto;margin-top:20px;margin-bottom:20px;padding:20px 30px 30px 30px;border-radius:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);background:#fff;line-height:1.7}
+      a:link{color:#f60;text-decoration:none;font-weight:700}
+      a:visited{color:#f60;text-decoration:none}
+      a:hover{color:#292929}
+      .mymenu{margin:0 auto;background-color:#fff;width:700px;border-radius:0 0 5px 5px;border:2px solid #fff;font-weight:700;font-size:15px;position:relative;padding-left:10px;padding-right:10px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
+      .mymenu ul{list-style-type:none;margin:0;padding:0;overflow:hidden;background-color:#fff;margin-right:10px;background:url(./img/made-for-mikrotik.png) no-repeat right!important}
+      .mymenu li{float:left}
+      .mymenu li a{display:block;color:#292929;text-align:center;padding:8px 10px;text-decoration:none;margin-top:5px;margin-bottom:5px}
+      .mymenu li a:hover{background-color:#292929;color:#fff;border-radius:5px}
+      button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:8px;width:135px;font-size:15px;font-weight:700;cursor:pointer;border-radius:5px}
+      button:hover{background-color:#ccc;color:#292929}
+      .forms-out{margin:0 auto;padding:0;font-size:14px}
+      .forms-in{width:100%;margin:0 auto;color:#fff;padding:0;font-size:14px}
+      .forms-in div{padding:0;max-width:350px;margin:0 auto;border-radius:5px;margin-bottom:15px}
+      .forms-in h3{text-align:center}
+      .forms-in input{border:none;width:100%;margin-bottom:15px;padding:10px;box-sizing:border-box;border-radius:3px}
+      .forms-in button{border:none;padding:7px 20px;border-radius:4px;cursor:pointer;font-weight:700;margin-top:10px;margin-bottom:15px}
+      .forms-in button:hover{opacity:.7}
+      .hide{display:none}
+      #forgot-password{cursor:pointer}
+      #forgot-password:hover{opacity:.7}
+      #show-register{cursor:pointer}
+      #show-register:hover{opacity:.7}
+      #show-login{cursor:pointer}
+      #show-login:hover{opacity:.7}
+      .modal{display:block;position:fixed;z-index:1;padding-top:170px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.6)}
+      .modal-login{display:none;position:fixed;z-index:1;padding-top:170px;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,0.6)}
+      .modal-content{line-height:1.4;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin:auto;padding:20px;border:1px solid #444;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);font-weight:700;font-size:14px}
+      .modal-content p{padding:0;margin:5px 5px 0 17px;display:list-item;line-height:2;list-style:disc}
+      .modal-content h2{color:#f60;float:left;padding:0;margin:0}
+      .close{color:#aaa;float:right;font-size:20px;font-weight:700;margin-top:-25px;margin-right:-15px}
+      .close:hover,.close:focus{color:orange;text-decoration:none;cursor:pointer}
+      .myButtonGoogle{display:flex;justify-content:space-between;align-items:center;width:auto;cursor:pointer;font-weight:400;float:right}
+      .myButtonGoogle :hover{opacity:.7}
+      .myButtonGoogle img{width:32px;padding:0;margin:0}
+      .myButtonGoogle .text{padding:0;margin:0}
+      .gsib_a{height:30px;padding-left:10px!important}
+      .gsc-input input{font-size:14px;color:#333;background:#fff!important}
+      .gsc-input-box{border-radius:5px;height:34px;background:#fff!important;margin-right:-6px!important;line-height:normal!important}
+      .gsc-search-button-v2{border-radius:5px!important;height:34px!important}
+      .gsc-control-cse{background:#fff!important;border:none!important;clear:both}
+      .google-search, .gcse-searchbox {float:right;width:250px;}
+      div#container_notlike,div#container_like{display:none}
+      #dialogoverlay{display:none;opacity:.5;position:fixed;top:0;left:0;background:#292929;width:100%;z-index:10}
+      #dialogbox{display:none;position:fixed;background:#292929;border-radius:5px;width:400px;z-index:10;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
+      #dialogbox>div{border-radius:5px;margin:3px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
+      #dialogbox>div>#dialogboxhead{background:#292929;opacity:.5;font-weight:700;font-size:15px;padding:10px;color:#fff}
+      #dialogbox>div>#dialogboxbody{font-weight:400;font-size:15px;padding:20px;color:#ccc}
+      #dialogbox>div>#dialogboxfoot{padding:10px;text-align:right}
+      .show-login-menu{width:100%;margin-bottom:10px}
+      .mikrotik-logo{display:none}
+      .column{float:left;width:50%}
+      .column a{font-weight:600}
+      .row:after{content:"";display:table;clear:both}
+      .member-only{margin-left:5px;height:13px;width:12px}
+      .footer{margin-top:15px;text-align:center;font-size:13px}
+      .show-homepage-menu{margin-bottom:3px}
+      .avatar img{margin-bottom:-13px;margin-left:5px;margin-right:5px;width:40px;height:40px;background-size:cover;background-repeat:no-repeat;background-position:center center;-webkit-border-radius:99em;-moz-border-radius:99em;border-radius:99em;border:2px solid #292929}
+      .terminal{margin-bottom:15px;width:100%;display:none}
+      .terminal img{max-width:100%;height:auto;display:block;margin-left:auto;margin-right:auto}
+      .tooltip{position:relative;display:inline-block;font-size:13px}
+      .tooltip .tooltiptext{visibility:hidden;width:150px;background-color:#555;color:#fff;text-align:center;border-radius:6px;padding:10px;position:absolute;z-index:1;bottom:125%;left:50%;margin-left:-60px;opacity:.9;transition:opacity .3s}
+      .tooltip .tooltiptext::after{content:"";position:absolute;top:100%;left:50%;margin-left:-18px;border-width:5px;border-style:solid;border-color:#555 transparent transparent}
+      .tooltip:hover .tooltiptext{visibility:visible;opacity:.9}
+      .disclaimer{margin-top:0px;margin-bottom:25px;color:#fff !important;padding:10px;border-radius:5px;font-size:14px; background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
+      @media screen and (max-width:1024px) {
+      h1{font-size:45px}
+      h2{font-size:20px}
+      .logo-left a{font-size:21px}
+      }
+      @media screen and (max-width:768px) {
+      .logo-left a{margin-top:5px!important;font-size:20px}
+      .logo-left img{width:40px;}
+      h1{font-size:40px}
+      h2{font-size:19px}
+      .content{width:100%!important;padding:15px}
+      .mymenu{width:100%!important}
+      .logo{width:100%}
+      .logo-left{justify-content:center;display:flex;width:100%}
+      .logo-right{text-align:center;width:100%}
+      .footer{margin-bottom:15px}
+      }
+      @media screen and (max-width:700px) {
+      h1{font-size:35px}
+      }
+      @media screen and (max-width:600px) {
+      .disclaimer{padding:5px;font-size:13px}
+      .column{float:left;width:100%}
+      .text-join-now{display:none}
+      .show-login-menu{display:flex;justify-content:center;width:100%;margin-bottom:10px}
+      .show-homepage-menu{display:flex;justify-content:center;width:100%}
+      h1{font-size:30px}
+      h2{font-size:18px}
+      .mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
+      .mymenu{padding-left:0;padding-right:0}
+      .mymenu ul{background:none!important;justify-content:center;display:flex}
+      }
+      @media screen and (max-width:500px) {
+      .google-search, .gcse-searchbox{margin-top:6px;width:100% !important}	  
+      .google-search, .gcse-searchbox{width:100% !important}	  
+      h1{font-size:25px}
+      h2{font-size:17px}
+      .hide-homepage{display:none}
+      }
+      @media print {
+      body,.body-fauxcolumn-outer{background:none!important;font-size:10pt}
+      }
+      
+      #searchForm{
+      /* The search form. */
+      padding:50px 50px 30px;
+      margin:80px 0;
+      position:relative;
+      border:0px solid #222;
+      -moz-border-radius:16px;
+      -webkit-border-radius:16px;
+      border-radius:16px;
+      }
+      fieldset{
+      border:none;
+      }
+      p.credit{
+      margin:20px 0;
+      text-align:center;
+      }
+      p.credit a{
+      color:#FF9900;
+      font-size:11px;
+      padding:4px 8px;
+      }
+      p.credit a:hover{
+      color:#999;
+      }
+      a, a:visited {
+      text-decoration:none;
+      outline:none;
+      color:#97cae6;
+      }
+      a:hover{
+      }
+      .clear{
+      clear:both;
+      }
+      @media screen and (max-width: 500px){
+      #page{
+      width:95%;
+      }       
+      #searchForm{
+      /* The search form. */
+      padding:30px 10px 10px;
+      margin:40px 0;
+      width:95%;
+      }
+      h1{
+      overflow:hidden;
+      line-height: normal;
+      text-align:center;
+      font-size: 2.0rem;
+      font-weight: 400;
+      }     
+      }
+      .mymenu {
+      margin:0 auto;
+      background-color: #ddd;
+      width:570px;
+      border-radius:0 0 5px 5px;
+      border: 1px solid #ddd;
+      font-weight:bold;
+      font-size:13px;
+      }
+      .mymenu ul {
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #ddd;
+      }
+      .mymenu li {
+      float: left;
+      }
+      .mymenu li a {
+      display: block;
+      color: #555;
+      text-align: center;
+      padding: 8px 10px;
+      text-decoration: none;
+      }
+      .mymenu li a:hover {
+      background-color: #bbb;
+      color: #111;
+      }   
+    </style>
 </head>
 <body onLoad="callmodal()">
 <div class="content">
