--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Free MikroTik RouterOS Online Tools - By MikrotikScript.Github.io</title>
+<title>Free MikroTik RouterOS Online Tools - By irfannjt.Github.io</title>
 <meta name="google-site-verification" content="google-site-verification=v9jfwyACp9axJqzwm1GlUgutNsmz-gLAg37rIqsnln0">
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content='Free MikroTik RouterOS Online Tools, the most complete Router tools to make it easier for you maker RouterOS Mikrotik scripts!
-By mikrotiktool.Github.io' name='description'/>
+By irfannjt.Github.io' name='description'/>
 <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
-<link rel="shortcut icon" href="https://irfannjt.github.io/script/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="https://irfannjt.github.io/favicon.ico" type="image/x-icon"> 
 <meta property="og:title" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:description" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://irfannjt.github.io/script/">
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3815059393374366" crossorigin="anonymous"></script>
+<meta property="og:url" content="https://irfannjt.github.io">
  <style>
       *{
       margin:0;
@@ -256,35 +255,26 @@ By mikrotiktool.Github.io' name='description'/>
       }   
     </style>
 </head>
+  <body>
+    <div class="mymenu">
+      <ul>
+        <li><a target="_blank" href="https://irfannjt.github.io/script/">☰ ALL TOOLS</a></li>
+        <li><a target="_blank" href="https://github.com/irfannjt">GITHUB</a></li>
+        <li><a target="_blank" href="#">DONATE</a></li>
+        <li><a target="_blank" href="#">CONTACT</a></li>
+        <img style="float:right; margin-right:10px" src="https://user-images.githubusercontent.com/42666125/150687713-5bb23ddf-11a2-476d-a6dc-81e97eec3a77.png" alt="Mikrotik RouterOS">
+      </ul>
+    </div>
+
 <body onLoad="callmodal()">
 <div class="content">
 <div class="logo">	  
-<a href="https://irfannjt.github.io/script/"><span style="color:#8E2DE2 !important">mikrotikscript</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
+<a href=""><span style="color:#8E2DE2 !important">irfannjt</span>.Github.io</a> <img style="margin-left:10px" src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Firfannjt.github.io/script/%2F&count_bg=%23C83D3D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=pageview&edge_flat=false" alt="Hits"/>
 </div>	
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mikrotiktool -->
-<ins class="adsbygoogle"
-     style="display:inline-block;width:728px;height:90px"
-     data-ad-client="ca-pub-3815059393374366"
-     data-ad-slot="3896250138"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M5TL99Q9M2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<!-- irfannjt -->
 
-  gtag('config', 'G-M5TL99Q9M2');
-</script>
-<span style="line-height:0;float:left; display:inline;margin-right:6px; margin-top:25px">
-<img src="https://irfannjt.github.io/script/mikrotik/img/logo.png" alt="HOME">
-</span>	 
-<h2>FREE MIKROTIK ROUTEROS TOOLS</h2>
-<h3>MIKROTIK <span style="color:red">[</span> SCRIPT <span style="color:red">]</span> ROUTEROS DATABASE</h3>
-<p><a target="_blank"  href="https://irfannjt.github.io/script/mikrotik/">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
+<h1>Generator Tools Made for MikroTik RouterOS</h1>
+<p><a target="irfannjt.github.io/generate/tool/"  href="irfannjt.github.io/generate/tool/">Complete Mikrotik RouterOS Script Database</a> - Enjoy the most complete script to make it easier for you to learn Mikrotik RouterOS scripts!</p>
 
 <h3>MIKROTIK SCRIPT GENERATOR </h3>
 <p><a target="_blank"  href="/script/mikrotik-expired-isolate-pppoe-hotspot.html">Mikrotik Notification Expired For Hotspot, PPPoE And Static IP</a> - Mikrotik All-In-One Notification Isolated and Expired For Hotspot, PPPoE And Static IP For RouterOS</p>
@@ -351,36 +341,17 @@ By mikrotiktool.Github.io' name='description'/>
 <p><a target="_blank"  href="https://github.com/aviantorichad/MIKROSTATOR">MIKROSTATOR</a> - MIKROSTATOR is an application that is used to perform administration on an internet network using a mikrotik router.</p>
 <p><a target="_blank"  href="https://mikbotam.net">MIKBOTAM</a> - Mikbotam is an application that makes it easy for hotspot services, because it makes it easier to generate usernames and passwords as well as easier user management with a pleasing web interface.</p>
 <br>
+ <div class="footer">
+          <div class="disclaimer">
+            <span style="font-weight:700; font-size:14px; padding-left:6px; padding-right:6px; border-left:6px solid #f60; border-right:6px solid #f60; color:#f60;margin-right:5px ">DISCLAIMER</span> <span style="text-decoration:underline; font-size:12px;margin-right:0px "></span> 
+            We are not responsible for any error, failure, damage or your router being locked due to intentional or accidental factors. Our Tool works independently, not under the auspices of the MikroTik Company, all problems that occur on your router are your own responsibility and you must be prepared to accept all the risks. If you "Agree", please continue.
+          </div>
+          © Copyright 2020-<span id="year">2022</span> <a target="_blank" href="https://irfannjt.github.io/generate//">irfannjt.github.io</a> is proudly powered by <a target="_blank" href="https://pages.github.com/">GitHub Pages</a>
+          <div style="margin-top:0px; color:#777; font-size:11px">
+            Project by <a target="_blank" href="https://github.com/irfannjt">Irfan JT</a> site <a target="_blank" href="#">MikroTik Generator Tools</a>Bogor, INDONESIA
+          </div>
 
- <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- mikrotiktool -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-3815059393374366"
-     data-ad-slot="3756649336"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script> 
-<div style="margin-top:20px; text-align:center; font-size:14px"
-© Copyright 2020-2021 <a href="htpps://irfannjt.github.io/script/">Free Mikrotik Routeros Tools</a> is proudly powered by <a href="https://pages.github.com/">GitHub Pages</a> <br> Don't Forget to Follow <a href="https://github.com/irfannjt">My Github</a>   
-</div>
-</div>
-<script type="text/javascript">
-var modal = document.getElementById("myModal");
-var span = document.getElementsByClassName("close")[0]
-function callmodal() {
-  modal.style.display = "block";
-}
-span.onclick = function() {
-  modal.style.display = "none";
-}
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
-</body>
+            </form>
+    </div>
+  </body>
 </html>
