--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 By irfannjt.Github.io' name='description'/>
 <meta content='tool, pcc, queue, vpn, setting mikrotik, mikrotik, router, winbox, termimal, rsc, script, hotspot, wirelessm rtrwnet' name='keywords'/>
 <meta content='index, follow, noodp' name='robots'/>
-<link rel="shortcut icon" href="https://irfannjt.github.io/favicon.ico" type="image/x-icon"> 
+<link rel="shortcut icon" href="https://irfannjt.github.io/acript/favicon.ico" type="image/x-icon"> 
 <meta property="og:title" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:description" content="MikroTik Online Tools (Unofficial) ">
 <meta property="og:image:alt" content="MikroTik Online Tools (Unofficial) ">
